# xiaoHttp

./: CMakeLists.txt  README.md
cmake/: ParseAndAddDrogonTests.cmake  ParseAndAddXiaoHttpTests.cmake
cmake/templates/: version.h.in
cmake_modules/: FindJsoncpp.cmake
lib/inc/xiaoHttp/: Attribute.h  CacheMap.h  Cookie.h  DrClassMap.h  DrObject.h  DrTemplateBase.h  HttpAppFramework.h  HttpBinder.h  HttpFilter.h  HttpRequest.h  HttpResponse.h  HttpSimpleController.h  HttpTypes.h  HttpViewData.h  IOThreadStorage.h  RateLimiter.h  RequestStream.h  Session.h  UploadFile.h  WebSocketConnection.h  WebSocketController.h  xiaoHttp.h  xiaoHttp_callbacks.h  xiaoHttp_test.h
lib/inc/xiaoHttp/plugins/: AccessLogger.h  GlobalFilters.h  Hodor.h  Plugin.h  RealIpResolver.h
lib/inc/xiaoHttp/utils/: FunctionTraits.h  HttpConstraint.h  Utilities.h  coroutine.h
lib/inc/xiaoHttp/utils/monitoring/: Collector.h  Counter.h  Gauge.h  Histogram.h  Mertric.h  Registry.h  Sample.h  StopWatch.h
lib/src/: AOPAdvice.cpp  AOPAdvice.h  AccessLogger.cpp  CacheFile.cpp  CacheFile.h  ConfigAdapter.h  ConfigAdapterManager.cpp  ConfigAdapterManager.h  ConfigLoader.cpp  ConfigLoader.h  ControllerBinderBase.h  Cookie.cpp  DrClassMap.cpp  DrTemplateBase.cpp  FiltersFunction.cpp  FiltersFunction.h  FixedWindowRateLimiter.cpp  FixedWindowRateLimiter.h  GlobalFilters.cpp  Histogram.cpp  Hodor.cpp  HttpAppFrameworkImpl.cpp  HttpAppFrameworkImpl.h  HttpBinder.cpp  HttpConnectionLimit.cpp  HttpConnectionLimit.h  HttpControllerBinder.h  HttpControllersRouter.cpp  HttpControllersRouter.h  HttpFileUploadRequest.cpp  HttpFileUploadRequest.h  HttpMessageBody.h  HttpRequestImpl.cpp  HttpRequestImpl.h  HttpRequestParser.cpp  HttpRequestParser.h  HttpResponseImpl.cpp  HttpResponseImpl.h  HttpServer.cpp  HttpServer.h  (+21 more)
lib/tests/: CMakeLists.txt
lib/tests/unittests/: DrObjectTest.cpp  main.cpp
orm_lib/inc/xiaoHttp/orm/: ArrayParser.h  DbClient.h  DbConfig.h  DbTypes.h  Exception.h  Field.h  FunctionTraits.h  Result.h  ResultIterator.h  Row.h  RowIterator.h  SqlBinder.h
orm_lib/src/: ArrayParser.cpp  Exception.cpp  Field.cpp
